# QualificacaoMatheus2

./: README.md
Matheus/IFE1/: Main.cpp  Main.h  Makefile
Matheus/IFE1/Functions/: F_Calculos.cpp  F_Matrix.cpp  F_PETSc.cpp  F_Prog.cpp  Funcoes.h
Matheus/Modelos-Turbulencia/: CMakeLists.txt  main.cpp  main.h
Matheus/Modelos-Turbulencia/Geo/: GmshExport.geo  GmshExport.msh
Matheus/Modelos-Turbulencia/Objects/Fluid/BaseElements/: fKP.h  fLine.h  fMaterial.h  fSurface.h
Matheus/Modelos-Turbulencia/Objects/Fluid/FinElements/: fLineElement.h  fNode.h  fPlaneElement.h
Matheus/Modelos-Turbulencia/functs/: CMakeLists.txt  F_Calculate.cpp  F_Gmsh.cpp  F_Paraview.cpp  F_Prog.cpp  Funcoes.h
Matheus/Modelos-Turbulencia/inputs/: CMakeLists.txt  Exemplo1.cpp  Exemplos.h
